--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog App | Home</title>
+    <title>Blog App | Homepage</title>
     <link rel="icon" type="image/x-icon" href="favicon.svg" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="/" class="navbar__logo">
+        <a href="/homepage" class="navbar__logo">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#fff" class="bi bi-pen" viewBox="0 0 16 16">
             <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z"/>
           </svg>
@@ -25,25 +25,25 @@
           <div class="top__bar">
             <canvas id="draw"></canvas>
           </div>
-          <li class="navbar__item">
+          <!-- <li class="navbar__item">
             <a href="/profile" class="navbar__links">Profile</a>
           </li>
           <li class="navbar__item">
-            <a href="/blogCreate" class="navbar__links">Write Blog</a>
-          </li>
+            <a href="/login" class="navbar__links">Write Blog</a>
+          </li> -->
           <!-- <li class="navbar__item">
             <a href="/" class="navbar__links">My Blogs</a>
           </li> -->
 
           <li class="navbar__btn">
-            <a href="/login" class="button">Log Out</a>
+            <a href="/login" class="button">Log In</a>
           </li>
         </ul>
       </div>
     </nav>
-    <h1 id="home_header">Home</h1>
+    <h1 id="home_header">Homepage</h1>
     <header>
-      <p>Hello, <%= user.firstname %></p>
+          <p>Hello</p>
       <div class="header_links">
       <a href="#blogs" onClick="displayTab('blogs')">Blogs</a>
       <a href="#tags" onClick="displayTab('tags')">Tags</a>
