--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,7 +90,7 @@
         <ul>
           <% authors.forEach(author => { %>
             <li>
-              <a href="/getSingleAuthor/<%= author._id %>" authorId="<%= author._id %>">
+              <a href="/getAuthor/<%= author._id %>" authorId="<%= author._id %>">
               <%= author.firstname, %>
               <%= author.lastname %>
             </a>
