--- a/views/verifiedBlog.ejs
+++ b/views/verifiedBlog.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog App | Profile</title>
+    <title>Blog App | Blog</title>
     <link rel="icon" type="image/x-icon" href="/favicon.svg" />
     <link rel="stylesheet" href="/style.css" />
   </head>
@@ -41,35 +41,44 @@
         </ul>
       </div>
     </nav>
-    <h1 id="home_header">Your Profile</h1>
-    <header>
-      <p>Hello, <%= user.firstname %></p>
-    </header>
-    <div class="profile_container">
-      <main class="profile">
-        <p class="profile_paragraph">Fullname: <%= user.firstname %>
-          <%= user.lastname %></p>
-          <p class="profile_paragraph">Email: <%= user.email %></p>
+    <h1 id="home_header">Blog</h1>
 
-          <ul>
-            <h2>Blogs</h2>
-            <% blogs.forEach(blog => { %>
-              <li class="li">
-                <a href="/views/verified/getSingleBlog/<%= blog._id %>">
-                  <h3><%= blog.title %></h3>
-                
-                 <p style="font-weight: 400;
-                  opacity: 0.7;">
-                 <%= blog.description %>
-                </p> 
-               <a href="/views/verified/deleteBlog" class="button">Delete Blog</a>
-                </a>
-              </li>
-        
-            <% }); %>
-          </ul>
-      </main>
+  <header>
+    <p>Hello, <%= user.firstname %></p>
+  </header>
+
+  <div class="blog__container">
+
+    <div class="blog_main">
+      <h2>
+        <%= blog.title %>
+      </h2>
+      <p class="description">
+        <%= blog.description %>
+      </p>
+      <p class="readingTime">Reading Time: <%= blog.readingTime %> minutes</p>
+      <textarea class="body"  cols="200" rows="10" disabled>
+        <%= blog.body %>
+      </textarea>
+      <p class="readCount">
+        <%= blog.readCount %> person(s) read this
+      </p>
+      <% if (user) { %>
+        <% const userId=user._id %>
+          <% const authorId=blog.author %>
+            <% const userString=userId.toString() %>
+              <% const authorString=authorId.toString() %>
+
+                <% if (userString === authorString) { %>
+                  <a href="/views/verified/editBlog/<%= blog._id %>" id="edit">Edit Blog</a>
+
+                  <% } %>
+
+                    <% } %>
+
+
     </div>
-    <script src="/script.js"></script>
+  </div>
+  <script src="/script.js"></script>
     </body>
-    </html>
+</html>
