--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,62 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog App | Write Blog</title>
-    <link rel="icon" type="image/x-icon" href="favicon.svg" />
-    <link rel="stylesheet" href="../style.css" />
-  </head>
-  <body>
-    <nav class="navbar">
-      <div class="navbar__container">
-        <a href="/homepage" class="navbar__logo">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#fff" class="bi bi-pen" viewBox="0 0 16 16">
-            <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z"/>
-          </svg>
-          Blog App</a>
-        <div class="navbar__toggle" id="mobile-menu">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
 
-        <ul class="navbar__menu">
-          <div class="top__bar">
-            <canvas id="draw"></canvas>
-          </div>
-          <li class="navbar__item">
-            <a href="/profile" class="navbar__links">Profile</a>
-          </li>
-          <li class="navbar__item">
-            <a href="/blogCreate" class="navbar__links">Write Blog</a>
-          </li>
-          <!-- <li class="navbar__item">
-            <a href="/" class="navbar__links">My Blogs</a>
-          </li> -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Blog App | Blog</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.svg" />
+  <link rel="stylesheet" href="/style.css" />
+</head>
 
-          <li class="navbar__btn">
-            <a href="/logout" class="button">Log In</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <h1 id="home_header">Blog</h1>
+<body>
+  <nav class="navbar">
+    <div class="navbar__container">
+      <a href="/views/" class="navbar__logo">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#0080ff" class="bi bi-pen"
+          viewBox="0 0 16 16">
+          <path
+            d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001zm-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z" />
+        </svg>
+        Blog App</a>
 
-    <header>
-        <p>Hello!</p>
-      </header>
+      <a href="/views/signin" class="home">Log In</a>
+    </div>
+  </nav>
+  <h1 id="home_header">Blog</h1>
 
-      <div class="blog__container">
-        <div class="blog_main">
-            <h2><%= blog.title %></h2>
-            <p class="description"><%= blog.description %></p>
-            <p class="readingTime">Reading Time: <%= blog.readingTime %> minutes</p>
-            <p class="body"><%= blog.body %></p>
-            <p class="readCount"><%= blog.readCount %> person(s) read this</p>
-            
-        </div>
-      </div>
-    <script src="../script.js"></script>
-    </body>
-    </html>
+  <header>
+    <p>Hello!</p>
+  </header>
+
+  <div class="blog__container">
+
+    <div class="blog_main">
+      <h2>
+        <%= blog.title %>
+      </h2>
+      <p class="description">
+        <%= blog.description %>
+      </p>
+      <p class="readingTime">Reading Time: <%= blog.readingTime %> minutes</p>
+      <textarea class="body" disabled>
+        <%= blog.body %>
+      </textarea>
+      <p class="readCount">
+        <%= blog.readCount %> person(s) read this
+      </p>
+
+    </div>
+  </div>
+  <script src="/script.js"></script>
+</body>
+
+</html>
