--- a/views/editBlog.ejs
+++ b/views/editBlog.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog App | Profile</title>
+    <title>Blog App | Edit Blog</title>
     <link rel="icon" type="image/x-icon" href="/favicon.svg" />
     <link rel="stylesheet" href="/style.css" />
   </head>
@@ -41,34 +41,39 @@
         </ul>
       </div>
     </nav>
-    <h1 id="home_header">Your Profile</h1>
     <header>
-      <p>Hello, <%= user.firstname %></p>
+        <h1>Edit Blog</h1>
     </header>
-    <div class="profile_container">
-      <main class="profile">
-        <p class="profile_paragraph">Fullname: <%= user.firstname %>
-          <%= user.lastname %></p>
-          <p class="profile_paragraph">Email: <%= user.email %></p>
-
-          <ul>
-            <h2>Blogs</h2>
-            <% blogs.forEach(blog => { %>
-              <li class="li">
-                <a href="/views/verified/getSingleBlog/<%= blog._id %>">
-                  <h3><%= blog.title %></h3>
-                
-                 <p style="font-weight: 400;
-                  opacity: 0.7;">
-                 <%= blog.description %>
-                </p> 
-               <a href="/views/verified/deleteBlog" class="button">Delete Blog</a>
-                </a>
-              </li>
-        
-            <% }); %>
-          </ul>
-      </main>
+    <div class="write_container">
+      <form action="/views/verified/editBlog/<%= blog._id %>"  class="form" method="post">
+        <input type="text" id="title" name="title" class="write_input" value="<%= blog.title %>" required>
+        <input type="text" id="description" name="description" class="write_input" value="<%= blog.description %>" required>
+        <textarea name="body" id="body" cols="200" rows="10" required><%= blog.body %></textarea>
+        <label for="tags">Select Tags:</label>
+        <div class="select">
+          <% tags.forEach(function(tag) { %>
+            <p>
+              <input type="checkbox" class="tag" name="tags" value="<%= tag._id %>"
+                <% let isChecked = false; %>
+                <% for (const blogTag of blog.tags) { %>
+                  <% if (tag._id.equals(blogTag)) { %>
+                    <% isChecked = true; %>
+                    <% break; %>
+                  <% } %>
+                <% } %>
+                <% if (isChecked) { %> checked<% } %> />
+              <label for="tag-<%= tag._id %>" class="checkLabel"><%= tag.name %></label>
+            </p>
+          <% }); %> 
+        </div>
+        <label>
+            <input type="radio" name="state" value="draft" checked> Draft
+        </label>
+        <label>
+            <input type="radio" name="state" value="published"> Published
+        </label>
+        <button type="submit" class="btn-write">Finish Edit</button>
+    </form>
     </div>
     <script src="/script.js"></script>
     </body>
