--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="favicon.svg">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="../favicon.svg">
+    <link rel="stylesheet" href="../style.css">
     <title>Blog App</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
     <h1>Sign In</h1>
 </header>
     <div class="form_container">
-    <form method="post" action="/login" class="add_form">
+    <form method="post" action="/views/signin" class="add_form">
         <label for="Email">Email</label>
         <input type="email" id="email" name="email" class="login_input" placeholder="Email" required>
         <br>
@@ -21,7 +21,7 @@
         <br>
         <button type="submit" id="btn-block">Login</button>
     </form>
-    <p>Don't have an account? <a href="/signup">Sign Up</a></p>
+    <p>Don't have an account? <a href="/views/signup">Sign Up</a></p>
 </div>
 </body>
 </html>
