--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="favicon.svg">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="../favicon.svg">
+    <link rel="stylesheet" href="../style.css">
     <title>Blog App</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
         <h1>Sign Up</h1>
     </header>
     <div class="form_container">
-    <form action="/signup" method="POST" class="add_form">
+    <form action="/views/signup" method="POST" class="add_form">
         <label for="firstname">Firstname</label>
         <input type="text" id="firstname" name="firstname" class="signup_input" placeholder="Firstname" required>
         <br>
@@ -27,7 +27,7 @@
         <br>
         <button type="submit" id="btn-block">Sign Up</button>
     </form>
-    <p>Already have an account? <a href="/login">Log in</a></p>
+    <p>Already have an account? <a href="/views/signin">Log in</a></p>
     </div>
 </body>
 </html>
