--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -62,7 +62,7 @@
                   opacity: 0.7;">
                  <%= blog.description %>
                 </p> 
-               <a href="/views/verified/deleteBlog" class="button">Delete Blog</a>
+               <!-- <a href="/views/verified/deleteBlog" class="button">Delete Blog</a> -->
                 </a>
               </li>
         
