--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -23,9 +23,9 @@
     <header>
           <p>Welcome to The Blog App🥳</p>
       <div class="header_links">
-      <a href="#blogs" onClick="displayTab('blogs')">Blogs</a>
-      <a href="#tags" onClick="displayTab('tags')">Tags</a>
-      <a href="#authors" onClick="displayTab('authors')">Authors</a>
+      <a href="#blogs" class="link active" id="blogLink" onClick="displayTab('blogs', 'blogLink')">Blogs</a>
+      <a href="#tags" class="link" id="tagLink" onClick="displayTab('tags', 'tagLink')">Tags</a>
+      <a href="#authors"  class="link" id="authorLink" onClick="displayTab('authors', 'authorLink')">Authors</a>
     </div>
     </header>
     <div class="main_container">
