--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,7 @@ body {
     position: sticky;
     /* top: 0; */
     z-index: 999;
-    
+
 }
 
 .navbar__container {
@@ -49,6 +49,7 @@ body {
 .navbar__logo svg {
     margin-right: 3.5px;
 }
+
 .navbar__menu {
     display: flex;
     align-items: center;
@@ -143,6 +144,7 @@ body {
         background: red;
         color: #fff;
     }
+
     .navbar__container {
         display: flex;
         justify-content: space-between;
@@ -168,7 +170,7 @@ body {
         transition: all 0.5s ease;
         height: 60vh;
         z-index: -1;
-        padding-top: 20px;
+        padding-top: 10px;
         background: #fff;
     }
 
@@ -201,7 +203,7 @@ body {
         z-index: 99;
         height: 50vh;
         font-size: 1.2rem;
-        margin-top: 12px 0 0 0;
+        margin-top: 17px;
         width: 100%;
 
     }
@@ -273,6 +275,11 @@ body {
     #mobile-menu.is-active .bar:nth-child(3) {
         transform: translateY(-8px) rotate(-45deg);
     }
+}
+
+.header_links .active {
+    background-color: #121212;
+    color: #fff
 }
 
 header h1 {
@@ -360,10 +367,10 @@ header {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 0  10%;
+    padding: 0 10%;
     margin: 0;
 }
-    
+
 
 header p {
     margin: 5px 25px 20px 5px;
@@ -382,7 +389,7 @@ header p {
 }
 
 .header_links a:hover {
-    background: #121212;
+    background: #444;
     color: #fff;
 }
 
@@ -394,7 +401,7 @@ header p {
 .main_container {
     width: 100%;
     height: auto;
-    padding: 0  10%;
+    padding: 0 10%;
     margin: 0 0 30px 0;
 }
 
@@ -418,9 +425,9 @@ header p {
 
 .displayed ul li {
     width: 100%;
-    
+
     list-style: none;
-    
+
 }
 
 .displayed ul li a {
@@ -442,7 +449,7 @@ header p {
 .write_container {
     width: 100%;
     height: auto;
-    padding: 0  10%;
+    padding: 0 10%;
     margin: 0 0 20px 0;
 }
 
@@ -453,7 +460,8 @@ header p {
     padding: 50px 10%;
 }
 
-#title, #description {
+#title,
+#description {
     padding: 10px 15px;
     display: block;
     width: 100%;
@@ -499,6 +507,7 @@ textarea {
     display: block;
     margin: 10px;
 }
+
 .form .select input {
     display: inline;
     margin: 10px;
@@ -522,7 +531,7 @@ textarea {
     width: 100%;
     height: 40px;
     margin: 10px 0;
-    border-radius: 8px;   
+    border-radius: 8px;
 }
 
 .form .btn-write:hover {
@@ -540,7 +549,7 @@ textarea {
 .profile_container {
     width: 100%;
     height: auto;
-    padding: 0  10%;
+    padding: 0 10%;
     margin: 0 0 20px 0;
 }
 
@@ -548,7 +557,7 @@ textarea {
     background: #ccc;
     border: 1px solid #ccc;
     border-radius: 15px;
-    padding: 50px 10%; 
+    padding: 50px 10%;
     color: #000;
 }
 
@@ -565,9 +574,8 @@ textarea {
 
 .li {
     width: 100%;
-    
     list-style: none;
-    
+
 }
 
 .profile ul li a {
@@ -591,15 +599,15 @@ textarea {
 .blog__container {
     width: 100%;
     height: auto;
-    padding: 0  10%;
+    padding: 0 10%;
     margin: 0 0 20px 0;
 }
 
-.blog_main  {
+.blog_main {
     background: #ccc;
     border: 1px solid #ccc;
     border-radius: 15px;
-    padding: 50px 10%; 
+    padding: 50px 10%;
     color: #000;
 }
 
@@ -608,7 +616,8 @@ textarea {
     margin: 50px 0;
 }
 
-.description, .readingTime {
+.description,
+.readingTime {
     display: block;
     background: #fff;
     border: 1px solid #ccc;
@@ -637,4 +646,97 @@ textarea {
     padding: 10px 20px;
     height: 700px;
     font-size: 14px;
+    font-family: poppins;
+
+}
+
+@media screen and (max-width: 720px) {
+    .navbar__menu.active {
+        margin-top: 10px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .navbar__container {
+        padding-right: 3%;
+    }
+
+    header {
+        display: block;
+        justify-content: unset;
+    }
+
+    header p {
+        font-size: 16px;
+        display: block;
+        width: 100%;
+        /* position: absolute; */
+
+    }
+
+    .header_links a {
+        display: inline-block;
+        padding: 6px 12px;
+        margin: -3% 0 5% 0;
+        color: #121212
+    }
+
+    .main_container {
+        padding: 0 5%;
+    }
+
+    .displayed {
+        padding: 5% 9%
+    }
+
+    .blog__container {
+        padding: 0 5%;
+        margin: 10px;
+    }
+
+    .blog_main {
+        padding: 25px 5%;
+    }
+
+    .blog_main h2 {
+        font-size: 24px;
+        margin: 25px 0;
+    }
+
+    #home_header {
+        font-size: 24px;
+
+    }
+
+    .profile_container {
+        padding: 0 5%;
+        margin: 0 0 10px 0;
+    }
+
+    .profile {
+        padding: 20px 5%;
+    }
+
+    .profile ul h2 {
+        font-size: 24px;
+        margin: 20px 0;
+    }
+
+    .form_container {
+        width: 80%;
+        padding: 10px 10%;
+    }
+
+    header h1 {
+        font-size: 26px;
+        margin: 15px auto;
+    }
+
+    .write_container {
+        padding: 0 3%
+    }
+
+    .navbar__menu.active {
+        margin-top: -3px;
+    }
 }
